# verovio

./: .gitignore
bindings/java/: .gitignore  build.bat  build.sh  pom.xml  vcvars64_2022.bat
bindings/java/cmake/: CMakeLists.txt
bindings/java/src/main/java/: module-info.java
bindings/java/src/main/java/org/rismch/verovio/: Constants.java  LibraryLoader.java  ToolkitInitializer.java  VrvException.java  VrvRuntimeException.java
bindings/java/src/main/java/org/rismch/verovio/logging/: LogUtil.java  LogbackStatusListener.java  LoggerConfigurator.java
bindings/java/src/main/java/org/rismch/verovio/utils/: ClasspathURLStreamHandlerProvider.java  CommonUtil.java  ObjHolder.java  ObjectPair.java  StringPair.java  URLParser.java
bindings/java/src/main/resources/: logback.xml
bindings/java/src/test/java/org/rismch/verovio/test/: ToolkitInitializerTest.java
bindings/java/src/test/java/org/rismch/verovio/test/mei/: MeiTest.java
bindings/java/src/test/java/org/rismch/verovio/test/pae/: PaeTest.java
bindings/java/src/test/java/test/rismch/verovio/: ToolkitInitializerTest.java
bindings/java/src/test/java/test/rismch/verovio/mei/: MeiTest.java
bindings/java/src/test/java/test/rismch/verovio/pae/: PaeTest.java
bindings/java/src/test/resources/: SystemProperties.unix  SystemProperties.win
bindings/java/swig/: verovio.i
bindings/java/testdata/: .gitignore  compile-classpath.txt  test-classpath.txt
